[package]
name = "pixpipe_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
pixpipe = { path = "../pixpipe" }
wgpu = { path = "../../wgpu/wgpu" }
winit = "0.26"

[dev-dependencies]
async-executor = "1.4"
bytemuck = { version = "1.11", features = ["derive"] }
env_logger = "0.9"
glam = "0.21"
log = "0.4.17"
pollster = "0.2"
wgpu-types = { path = "../../wgpu/wgpu-types" }
